# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jun 2007; Vlastimil Babka <caster@gentoo.org>
  +sun-jdk-1.7.0.0_alpha14.ebuild:
  Snapshot bump. No openjdk source bundle yet.

  25 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  sun-jdk-1.7.0.0_alpha13.ebuild:
  Port pax-utils, src.zip and SRC_URI handling fixes from the main tree.

  25 May 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha12.ebuild, +sun-jdk-1.7.0.0_alpha13.ebuild:
  Bump to new snapshot.

  24 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  sun-jdk-1.6.0.02_alpha02.ebuild, sun-jdk-1.7.0.0_alpha12.ebuild:
  Bring in fixes from main tree, but still lots to clean in these ebuilds.

  08 May 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha11.ebuild, +sun-jdk-1.7.0.0_alpha12.ebuild:
  1.7 snapshot bump

  04 May 2007; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.02_alpha02.ebuild, sun-jdk-1.7.0.0_alpha11.ebuild:
  Fix src_unpack() to workaround bash bug triggered by paludis, bug #176979 by
  Bo Ørsted Andresen <bo.andresen@zlin.dk>.

  12 Apr 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.02_alpha01.ebuild, +sun-jdk-1.6.0.02_alpha02.ebuild:
  Bump of 6u2 snapshot. Javadoc fixed, hurray.

  11 Apr 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha10.ebuild, +sun-jdk-1.7.0.0_alpha11.ebuild:
  Bump to new 1.7 snapshot.

  31 Mar 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.1_alpha03.ebuild, -files/sun-jdk-1.6.0.1.env,
  +sun-jdk-1.6.0.02_alpha01.ebuild, +files/sun-jdk-1.6.0.02.env,
  -sun-jdk-1.7.0.0_alpha09.ebuild, +sun-jdk-1.7.0.0_alpha10.ebuild:
  Bump 1.6 to first 6u2 snapshot, and new 1.7 snapshot.

  02 Mar 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha07.ebuild, +sun-jdk-1.7.0.0_alpha09.ebuild,
  +wget-log:
  Snapshot bump.

  11 Feb 2007; Vlastimil Babka <caster@gentoo.org>